Add class to img, update

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Первая страница вопросов -->
         <div class="page page__question animate-hidden" id="page__question1">
             <p class="number-question" id="ques-num"></p>
-            <img src="#" alt="photo-question" id="photo-question">
+            <img src="#" alt="photo-question" class="image-question" id="photo-question">
             <button class="btn btn_a" id="a"></button>
             <button class="btn btn_b" id="b"></button>
             <button class="btn btn_c" id="c"></button>
@@ -34,7 +34,7 @@
         <!-- Вторая страница вопросов -->
         <div class="page page__question1 animate-hidden" id="page__question2">
             <p class="number-question1" id="ques-num2"></p>
-            <img src="#" alt="photo-question" id="photo-question2">
+            <img src="#" alt="photo-question" class="image-question" id="photo-question2">
             <button class="btn btn_a" id="a2"></button>
             <button class="btn btn_b" id="b2"></button>
             <button class="btn btn_c" id="c2"></button>
@@ -47,7 +47,7 @@
         </div> 
         <div class="page page__answer animate-hidden" id="page__answer1">
             <p class="page__answer-hedding" id="answer-hedding">РАЗВЕРНУТОЕ ОБЪЯСНЕНИЕ</p>
-            <img src="#" alt="photo-question" id="photo-question-answer">
+            <img src="#" alt="photo-question" class="image-question" id="photo-question-answer">
             <p class="page__answer-description" id="answer-description"></p>
             <button class="btn btn_reload-quest" id="reloadQuest">Следующий билет</button>
             <div class="page__scores">
