--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/styles/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="src/styles/style.css">
+    <link rel="stylesheet" href="/src/PressStart2P-Regular.ttf">
     <title>JS Game </title>
 </head>
 <body>
     <div class="root">
         <div class="page page__start animate" id="page__start1">
-            <p class="page__start-hello-heading">Привествую тебя, дорогой друг!</p>
+            <p class="page__start-hello-heading">Привествую, дорогой друг!</p>
             <p class="page__start-hello-text">Ты находишься на странице умопомрачительной игры в викторину с углубленными вопросами по ванильному JavaScript! Вопросы с правильными ответами сохранятся в списке правильных ответов, а неправильные - попадутся еще раз. Приятной игры и обучения!</p>
             <button class="btn btn__start" id="btn__start1">СТАРТУЕМ!</button>   
-            <img src="src/img/jabka.gif" class="page__start-jaba" alt="#" width="100px">
+            <!-- <img src="src/img/jabka.gif" class="page__start-jaba" alt="#" width="100px"> -->
         </div> 
         <!-- Первая страница вопросов -->
         <div class="page page__question animate-hidden" id="page__question1">
