--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p class="page__start-hello-heading">Привествую,<br> дорогой друг!</p>
             <p class="page__start-hello-text">Ты находишься на странице умопомрачительной игры в викторину с углубленными вопросами по ванильному JavaScript! Вопросы с правильными ответами сохранятся в списке правильных ответов, а неправильные - попадутся еще раз. Приятной игры и обучения!</p>
             <button class="btn btn__start" id="btn__start1">СТАРТУЕМ!</button>   
-            <!-- <img src="src/img/jabka.gif" class="page__start-jaba" alt="#" width="100px"> -->
+            <img src="src/img/rick.gif" class="page__start-jaba" alt="#" width="150px">
         </div> 
         <!-- Первая страница вопросов -->
         <div class="page page__question animate-hidden" id="page__question1">
