create button delete scores

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <p class="page__start-hello-heading">Привествую,<br> дорогой друг!</p>
             <p class="page__start-hello-text">Ты находишься на странице умопомрачительной игры в викторину с углубленными вопросами по ванильному JavaScript! Вопросы с правильными ответами сохранятся в списке правильных ответов, а неправильные - попадутся еще раз. Приятной игры и обучения!</p>
             <button class="btn btn__start" id="btn__start1">СТАРТУЕМ!</button>   
+            <button class="btn btn__restart" id="btn__restart1">СБРОСИТЬ РЕЗУЛЬТАТ</button>   
             <img src="src/img/rick.gif" class="page__start-jaba" alt="#" width="150px">
         </div> 
         <!-- Первая страница вопросов -->
